[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
  "venv", ".venv", "ml_models", "data", "build", "dist",
  "bot", "core", "backtest_strategy.py",
  "tests", "strategy", "fetch_market_data.py", "run_live.py"
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "E401", "E701", "E702", "E741"]  # add E741 for now

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
disable_error_code = ["misc", "index"]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
  "pydantic.mypy",
]

explicit_package_bases = true
follow_imports = "skip"
exclude = '(venv|.venv|build|dist|ml_models|data|bot|core|backtest_strategy\.py|brokers|ops|runner_paper\.py|runner|db|scripts|tools|tests|tests_core|tests_api)'
files = ["api"]  # only type-check API for now

[tool.pytest.ini_options]
testpaths = ["tests", "tests_core"]
addopts = "-q"


[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
  "pyyaml",
  "httpx",
]
visor = [
  "streamlit>=1.38",
  "requests>=2.31",
  "pandas>=2.0",
]
